--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -166,8 +166,8 @@
           <br>
 
           <div class="form-floating">
-            <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo" id="effectiveTo" type="date">
-            <label for="effectiveTo">Effective To</label>
+            <input class="form-control" placeholder="EffectiveTo" formControlName="EffectiveTo" id="EffectiveTo" type="date">
+            <label for="EffectiveTo">Effective To</label>
           </div>
           <br>
   
