--- a/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
@@ -1,138 +1,157 @@
 <c-col xs="12">
-    <c-card class="mb-4">
-      <c-card-header>
-        <strong>Access Privilege Configuration</strong>
-      </c-card-header>
+  <c-card class="mb-4">
+    <c-card-header>
+      <strong>Access Privilege Configuration</strong>
+    </c-card-header>
 
-      <c-card-body>
-        <form [formGroup]="accessPrivilegeForm" (ngSubmit)="onSubmit()" novalidate>
+    <c-card-body>
+      <form [formGroup]="accessPrivilegeForm" (ngSubmit)="onSubmit()" novalidate>
             
-            <c-col xs="12">
-                <c-card class="mb-4">
-                  <c-card-header style="color: #3b6998d7;" ><strong>
-                    Password Parameters
-                  </strong></c-card-header>
-                  <c-card-body >
-                   
-                        <c-card class="mb-4">
-                            <c-card-header>
-                                Password Length
-                            </c-card-header>
-                            <c-card-body class="form-inline" >
-                                <label for="minLength">Minimum Length :</label>
-                                <input id="minLength" type="number" formControlName="minLength" name="minLength">
-                                <label for="maxLength">Maximum Length :</label>
-                                <input id="maxLength" type="number" formControlName="maxLength" name="maxLength">
-                            </c-card-body>
-                        </c-card>
-                    
-                    <c-col xs="12">
-                        <c-card class="mb-4">
-                            <c-card-header>
-                                Combination Of Password
-                            </c-card-header>
-                            <c-card-body >
-                              <c-row><c-form-check>
-
-                                <!-- <span class="form-inline"> -->
-                                <input type="checkbox" name="alphabet" value="alphabet" onclick="onCheckAlphabet" formControlName="isAlphabetMandatory">                              
-                                <label for="alphabet" class="m-1">Alphabet</label> <br>                                                                     
-                                <input type="checkbox" name="numeric" value="numeric" formControlName='isNumberMandatory'>
-                                <label for="numeric" class="m-1"> Numeric</label><br>
-                                <input type="checkbox" name="specialChar" value="specialChar" formControlName="isSpecialCharsMandatory">
-                                <label for="specialChar" class="m-1"> Special Character</label>
-                              </c-form-check></c-row>            
-                            </c-card-body>
-                        </c-card>
-                    </c-col>
-                    
+        <c-col xs="12">
+          <c-card class="mb-4">
+            <c-card-header style="color: #3b6998d7;" >
+              <strong>Password Parameters</strong>
+            </c-card-header>
+            <c-card-body>
+              
+              <c-card class="mb-4">
+                  <c-card-header>
+                      Password Length
+                  </c-card-header>
+                  <c-card-body class="form-inline" >
+                      <label for="minLength">Minimum Length :</label>
+                      <input id="minLength" type="number" formControlName="minLength" name="minLength">
+                      <label for="maxLength">Maximum Length :</label>
+                      <input id="maxLength" type="number" formControlName="maxLength" name="maxLength">
                   </c-card-body>
-                </c-card>
-            </c-col>
-           
-            <c-col xs="12">
+              </c-card>
+              
+              <c-col xs="12">
                 <c-card class="mb-4">
-                  <c-card-header style="color: #3b6998d7;"><strong>
-                    Temporary User Locked For
-                  </strong></c-card-header>
+                  <c-card-header>
+                      Combination Of Password
+                  </c-card-header>
                   <c-card-body >
                     <c-row><c-form-check>
-                      <div >
-                      <input type="checkbox" name="noLogin" value="noLogin" formControlName="isLockedOnNoLoginActivity">
-                      <label for="noLogin" class="m-1">No login for 
-                        <input id="noLoginDays" name="noLoginDays" class="inline-textbox" formControlName="noLoginActivityDays">
-                        days (for this case account will be unlocked through authorized person)</label><br>
-                      </div>
-                      <input type="checkbox" name="failedLogin" value="failedLogin" formControlName="isLockedOnFailedLoginAttempts">
-                      <label for="failedLogin" class="m-1" >
-                        Failed Login for 
-                        <input id="numberOfFailedLoginAttempts" name="numberOfFailedLoginAttempts" class="inline-textbox" formControlName="numberOfFailedLoginAttempts">
-                        times within
-                        <input id="failedLoginAttemptsDuration" name="failedLoginAttemptsDuration" class="inline-textbox" formControlName="failedLoginAttemptsDuration">
-                        minutes. Later user will be locked for next
-                        <input id="failedLoginLockedDuration" name="failedLoginLockedDuration" class="inline-textbox" formControlName="failedLoginLockedDuration">
-                        hour.                      
-                      </label><br>
-                      <input type="checkbox" name="unlocking" value="unlocking" formControlName="isUnlockedOnByAdmin">
-                      <label for="unlocking" class="m-1"> 
-                        Unlock Account
-                        <input id="unlockedByAdminDuration" name="unlockedByAdminDuration" class="inline-textbox" formControlName="unlockedOnByAdminDuration">
-                        minutes later (only applicable when user failed to login within configured time by configured number of attempt)
-                      </label>
-                    </c-form-check></c-row>
-                  </c-card-body>
-                </c-card>
-            </c-col>
-            
-            <c-col xs="12">
-                <c-card class="mb-4">
-                  <c-card-header style="color: #3b6998d7;"><strong>
-                    Forced Password Changed On
-                  </strong></c-card-header>
-                  <c-card-body >
-                    <c-row><c-form-check name="forcePasswordChange">
-                     
-                      <input type="checkbox" name="firstLogin" formControlName="isPasswordChangeForcedOnFirstLogin">
-                      <label for="firstLogin" class="m-1">First Time Login </label><br>
-                     
-                      <input type="checkbox" name="forceReset" formControlName="isPasswordResetForcedPeriodically">
-                      <label for="forceReset" class="m-1" >
-                        Force Reset After
-                        <input type="number" id="forcePasswordResetDays" name="forcePasswordResetDays" class="inline-textbox" formControlName="forcePasswordResetDays">
-                        days. Notify user prior
-                        <input type="number" id="notifyPasswordResetDays" name="notifyPasswordResetDays" class="inline-textbox" formControlName="notifyPasswordResetDays">
-                        days.                                          
-                      </label><br>                      
-                    </c-form-check></c-row>
-                  </c-card-body>
-                </c-card>
-            </c-col>
-           
-            <c-col xs="12">
-                <c-card class="mb-4">
-                  <c-card-header style="color: #3b6998d7;"><strong>
-                    User Session Timeout
-                  </strong></c-card-header>
-                  <c-card-body>
-                    <input type="checkbox" id="sessionPolicy_isEnabled" name="sessionPolicy_isEnabled" formControlName="sessionPolicy_isEnabled">
-                    <label for="sessionPolicy_isEnabled" class="m-1">Duration </label>
-                    <input type="number" id="sessionDuration" name="sessionDuration" class="inline-textbox" formControlName="sessionPolicy_duration" name="sessionPolicy_duration">
-                    minutes.
-                  </c-card-body>
-                </c-card>
-            </c-col>
-            <br>
-            <c-col xs="12">
-                <c-col md>
-                  <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit()">Save</button>
-                  <button cButton class="btn btn-danger btnCancelColor me-1"
-                    onclick=" window.location.reload();">Cancel</button>
-      
-                </c-col>
-            </c-col>
-            
-        </form>
-      </c-card-body>
+                      <!-- <span class="form-inline"> -->
+                      <c-row><c-col>                                  
+                        <input type="checkbox" name="cbAlphabet" onclick="onCheckAlphabet" formControlName="isAlphabetMandatory" (change)="true" #cbAlphabet>                              
+                        <label for="cbAlphabet" class="m-1">Alphabet</label>
+                        <span *ngIf="cbAlphabet.checked" >
+                        <label for="maxAlphabet" class="m-1">: Maximum Letters </label>
+                        <input type="number" name="maxAlphabet" onclick="onCheckAlphabet" formControlName="alphabetLength" class='inline-textbox'>                              
+                        </span>                              
+                      </c-col></c-row> 
+                      
+                      <c-row><c-col>
+                        <input type="checkbox" name="cbNumeric" formControlName='isNumberMandatory' (change)="true" #cbNumeric>
+                        <label for="cbNumeric" class="m-1">Numeric</label>
+                        <span *ngIf="cbNumeric.checked">
+                        <label for="maxNumber" class="m-1">: Maximum Numbers </label>
+                        <input type="number" name="maxNumber" onclick="" formControlName="numericLength" class='inline-textbox'>
+                        </span>
+                      </c-col></c-row>
+                      
+                      <c-row><c-col>
+                        <input type="checkbox" name="cbSpecialChar" value="specialChar" formControlName="isSpecialCharsMandatory" (change)="true" #cbSpecialChar>
+                        <label for="cbSpecialChar" class="m-1">Special Character</label>
+                        <span *ngIf="cbSpecialChar.checked">
+                        <label for="maxNumber" class="m-1">: Maximum Special Characters </label>
+                        <input type="number" name="maxNumber" onclick="" formControlName="specialCharsLength" class='inline-textbox'>
+                        </span>
+                      </c-col></c-row>
 
-    </c-card>
+                    </c-form-check></c-row>            
+                  </c-card-body>
+                </c-card>
+              </c-col>           
+            </c-card-body>
+          </c-card>
+        </c-col>
+            
+        <c-col xs="12">
+          <c-card class="mb-4">
+            <c-card-header style="color: #3b6998d7;">
+              <strong>Temporary User Locked For</strong>
+            </c-card-header>
+            <c-card-body >
+              <c-row><c-form-check>
+                <input type="checkbox" name="cbNoLogin" formControlName="isLockedOnNoLoginActivity" (change)="true" #cbNoLogin>
+                <label for="cbNoLogin" class="m-1" >No login for 
+                  <input id="noLoginDays" name="noLoginDays" class="inline-textbox" formControlName="noLoginActivityDays">
+                  days (for this case account will be unlocked through authorized person)
+                </label><br>
+                
+                <input type="checkbox" name="cbFailedLogin" formControlName="isLockedOnFailedLoginAttempts" (change)="true" #cbFailedLogin>
+                <label for="cbFailedLogin" class="m-1" >
+                  Failed Login for 
+                  <input id="numberOfFailedLoginAttempts" name="numberOfFailedLoginAttempts" class="inline-textbox" formControlName="numberOfFailedLoginAttempts">
+                  times within
+                  <input id="failedLoginAttemptsDuration" name="failedLoginAttemptsDuration" class="inline-textbox" formControlName="failedLoginAttemptsDuration">
+                  minutes. Later user will be locked for next
+                  <input id="failedLoginLockedDuration" name="failedLoginLockedDuration" class="inline-textbox" formControlName="failedLoginLockedDuration">
+                  hour.                      
+                </label><br>
+
+                <input type="checkbox" name="cbUnlocking" formControlName="isUnlockedOnByAdmin" (change)="true" #cbUnlocking>
+                <label for="cbUnlocking" class="m-1"> 
+                  Unlock Account
+                  <input id="unlockedByAdminDuration" name="unlockedByAdminDuration" class="inline-textbox" formControlName="unlockedOnByAdminDuration">
+                  minutes later (only applicable when user failed to login within configured time by configured number of attempt)
+                </label>
+              </c-form-check></c-row>
+            </c-card-body>
+          </c-card>
+        </c-col>
+            
+        <c-col xs="12">
+          <c-card class="mb-4">
+            <c-card-header style="color: #3b6998d7;"><strong>
+              Forced Password Changed On
+            </strong></c-card-header>
+            <c-card-body >
+              <c-row><c-form-check name="forcePasswordChange">
+                
+                <input type="checkbox" name="cbFirstLogin" formControlName="isPasswordChangeForcedOnFirstLogin" (change)="true" #cbFirstLogin>
+                <label for="cbFirstLogin" class="m-1">First Time Login </label><br>
+                
+                <input type="checkbox" name="cbForceReset" formControlName="isPasswordResetForcedPeriodically" (change)="true" #cbForceReset>
+                <label for="cbForceReset" class="m-1" >
+                  Force Reset After
+                  <input type="number" id="forcePasswordResetDays" name="forcePasswordResetDays" class="inline-textbox" formControlName="forcePasswordResetDays">
+                  days. Notify user prior
+                  <input type="number" id="notifyPasswordResetDays" name="notifyPasswordResetDays" class="inline-textbox" formControlName="notifyPasswordResetDays">
+                  days.                                          
+                </label><br>                      
+              </c-form-check></c-row>
+            </c-card-body>
+          </c-card>
+        </c-col>
+            
+        <c-col xs="12">
+          <c-card class="mb-4">
+            <c-card-header style="color: #3b6998d7;"><strong>
+              User Session Timeout
+            </strong></c-card-header>
+            <c-card-body>
+              <input type="checkbox" name="cbSessionPolicy" formControlName="sessionPolicy_isEnabled" (change)="true" #cbSessionPolicy>
+              <label for="cbSessionPolicy" class="m-1">Duration </label>
+              <input type="number" id="sessionDuration" name="sessionDuration" class="inline-textbox" formControlName="sessionPolicy_duration">
+              minutes.
+            </c-card-body>
+          </c-card>
+        </c-col>
+        <br>
+        <c-col xs="12">
+          <c-col md>
+            <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit()">Save</button>
+            <button cButton class="btn btn-danger btnCancelColor me-1"
+              onclick=" window.location.reload();">Cancel</button>
+          </c-col>
+        </c-col>
+            
+      </form>
+    </c-card-body>
+
+  </c-card>
 </c-col>
