IA-90 Done, need to work on front end

--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -184,7 +184,7 @@
                     </select>
                   </div>
   
-                  <div cRow *ngIf="privilegeForm.get('role')?.invalid &&
+                  <!-- <div cRow *ngIf="privilegeForm.get('role')?.invalid &&
                   privilegeForm.get('role')?.errors &&
                         (privilegeForm.get('role')?.dirty || privilegeForm.get('role')?.touched)">
                     <small class="text-danger" *ngIf="countryForm.get('role').hasError('required')">
@@ -192,7 +192,7 @@
                     </small>
                                 
                     
-                  </div>
+                  </div> -->
                 </c-col>
   
   
@@ -208,7 +208,7 @@
                     </select>
                   </div>
   
-                  <div cRow *ngIf="privilegeForm.get('module')?.invalid &&
+                  <!-- <div cRow *ngIf="privilegeForm.get('module')?.invalid &&
                   privilegeForm.get('module')?.errors &&
                         (privilegeForm.get('module')?.dirty || privilegeForm.get('module')?.touched)">
                     <small class="text-danger" *ngIf="countryForm.get('module').hasError('required')">
@@ -216,7 +216,7 @@
                     </small>
                                 
                     
-                  </div>
+                  </div> -->
                 </c-col>
   
               </c-row>
