--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -3,7 +3,7 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <i class="fa fa-align-justify" ></i> Risk Profile List
+            <strong class="fa fa-align-justify" >Risk Profile List</strong> 
           </div>
           <div class="card-body">
             <div class="row">
@@ -49,9 +49,9 @@
                   </thead>
                   <tbody *ngIf="riskProfiles?.length != 0">
                     <tr *ngFor="let riskProfile of riskProfiles">
-                      <td>{{ riskProfile.likelihoodTypeId }}</td>
-                      <td>{{ riskProfile.impactTypeId }}</td>
-                      <td>{{ riskProfile.ratingTypeId }}</td>
+                      <td>{{ riskProfile.likelihoodType }}</td>
+                      <td>{{ riskProfile.impactType }}</td>
+                      <td>{{ riskProfile.ratingType }}</td>
                       <!-- <td>{{ riskProfile.effectiveFrom | date:'medium' }}</td>
                       <td>{{ riskProfile.effectiveTo | date:'medium' }}</td> -->
                       <td>{{ riskProfile.description }}</td>
@@ -95,8 +95,8 @@
 
   
           <div form-floating>
-            <select aria-label="Floating label select example" cSelect id="likelihoodTypeId"
-              formControlName="likelihoodTypeId" name="likelihoodTypeId">
+            <select aria-label="Floating label select example" cSelect id="likelihoodType"
+              formControlName="likelihoodTypeId" name="likelihoodType">
               <option value="null">Select Likelihood Level</option>
               <option *ngFor="let commonValueAndType of likelihoodType" [value]="commonValueAndType.id">
                 {{commonValueAndType.text}}
@@ -106,16 +106,16 @@
 
           <div cRow *ngIf="riskProfileForm.get('likelihoodTypeId')?.invalid &&
           riskProfileForm.get('likelihoodTypeId')?.errors &&
-                (riskProfileForm.get('likelihoodTypeId')?.dirty || riskProfileForm.get('likelihoodTypeId')?.touched)">
-            <small class="text-danger" *ngIf="riskProfileForm.get('likelihoodTypeId').hasError('required')">
+                (riskProfileForm.get('likelihoodType')?.dirty || riskProfileForm.get('likelihoodType')?.touched)">
+            <small class="text-danger" *ngIf="riskProfileForm.get('likelihoodType').hasError('required')">
               This field is required.
             </small>                                 
           </div> 
           <br>
 
           <div form-floating>
-            <select aria-label="Floating label select example" cSelect id="impactTypeId"
-              formControlName="impactTypeId" name="impactTypeId">
+            <select aria-label="Floating label select example" cSelect id="impactType"
+              formControlName="impactTypeId" name="impactType">
               <option value="null">Select Impact Level</option>
               <option *ngFor="let commonValueAndType of impactType" [value]="commonValueAndType.id">
                 {{commonValueAndType.text}}
@@ -124,18 +124,18 @@
           </div>
          
 
-          <div cRow *ngIf="riskProfileForm.get('impactTypeId')?.invalid &&
-          riskProfileForm.get('impactTypeId')?.errors &&
-                (riskProfileForm.get('impactTypeId')?.dirty || riskProfileForm.get('impactTypeId')?.touched)">
-            <small class="text-danger" *ngIf="riskProfileForm.get('impactTypeId').hasError('required')">
+          <div cRow *ngIf="riskProfileForm.get('impactType')?.invalid &&
+          riskProfileForm.get('impactType')?.errors &&
+                (riskProfileForm.get('impactType')?.dirty || riskProfileForm.get('impactType')?.touched)">
+            <small class="text-danger" *ngIf="riskProfileForm.get('impactType').hasError('required')">
               This field is required.
             </small>                                 
           </div> 
           <br>
 
           <div form-floating>
-            <select aria-label="Floating label select example" cSelect id="ratingTypeId"
-              formControlName="ratingTypeId" name="ratingTypeId">
+            <select aria-label="Floating label select example" cSelect id="ratingType"
+              formControlName="ratingTypeId" name="ratingType">
               <option value="null">Select Risk Rating</option>
               <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
                 {{commonValueAndType.text}}
@@ -143,10 +143,10 @@
             </select>
           </div>
 
-          <div cRow *ngIf="riskProfileForm.get('ratingTypeId')?.invalid &&
+          <div cRow *ngIf="riskProfileForm.get('ratingType')?.invalid &&
           riskProfileForm.get('riskLevel')?.errors &&
-                (riskProfileForm.get('ratingTypeId')?.dirty || riskProfileForm.get('ratingTypeId')?.touched)">
-            <small class="text-danger" *ngIf="riskProfileForm.get('ratingTypeId').hasError('required')">
+                (riskProfileForm.get('ratingType')?.dirty || riskProfileForm.get('ratingType')?.touched)">
+            <small class="text-danger" *ngIf="riskProfileForm.get('ratingType').hasError('required')">
               This field is required.
             </small>                                 
           </div> 
