--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -10,7 +10,7 @@
           <c-row>
             <c-col md="4" *ngFor="let data of Data; let i=index">
               <c-form-check>
-                <input type="checkbox" [id]="data.id" [checked]="isChecked(data.id)" (change)="eventCheck($event)"/>
+                <input type="checkbox" [id]="data.id" [checked]="isChecked(data.id)" (change)="onCheckChange($event)"/>
                 <label for="checkThree" class="m-1"> {{data.name}}</label>
               </c-form-check>
             </c-col>
