Multiple table done

--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -41,7 +41,7 @@
                   </div>
                 </div>
                 <div class="row overflow-auto">
-                    <table datatable [dtOptions]="dtOptions[1]" class="table table-bordered row-border hover" >
+                    <table datatable [dtOptions]="dtOptions[1]" id="DataTables_Table_1"  class="table table-bordered row-border hover" >
                       <thead>
                         <tr>
                           <th>Name</th>
@@ -223,7 +223,7 @@
               <c-row>
 
                 <div class="row overflow-auto mt-4">
-                  <table datatable [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover" style="width: 100% !important" >
+                  <table datatable id="DataTables_Table_0" [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover" style="width: 100% !important" >
                     <thead>
                       <tr>
                         <th>Module</th>
